feat: adding jacoco reporting plugin